--- a/Arquivo Inicial.ipynb
+++ b/Arquivo Inicial.ipynb
@@ -14,12 +14,12 @@
     "E-mail da diretoria: seugmail+diretoria@gmail.com<br>\n",
     "Local onde o sistema disponibiliza as vendas do dia anterior: https://drive.google.com/drive/folders/149xknr9JvrlEnhNWO49zPcw0PW5icxga?usp=sharing\n",
     "\n",
-    "Para resolver isso, vamos usar o pyautogui, uma biblioteca de automação de comandos do mouse e do teclado"
+    "Para resolver isso, vamos usar o pyautogui, uma biblioteca de automação de comandos do mouse e do teclado\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyautogui \n",
     "import time\n",
+    "\n",
     "\n",
     "pyautogui.PAUSE = 1 #coloca uma pausa de 1 segundo entre cada comando\n",
     "# Passo a passo do desafio \n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +94,12 @@
     "### Vamos agora ler o arquivo baixado para pegar os indicadores\n",
     "\n",
     "- Faturamento\n",
-    "- Quantidade de Produtos"
+    "- Quantidade de Produtos\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -310,12 +311,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vamos agora enviar um e-mail pelo gmail"
+    "### Vamos agora enviar um e-mail pelo gmail\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,12 +364,12 @@
    "source": [
     "#### Use esse código para descobrir qual a posição de um item que queira clicar\n",
     "\n",
-    "- Lembre-se: a posição na sua tela é diferente da posição na minha tela"
+    "- Lembre-se: a posição na sua tela é diferente da posição na minha tela\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
