--- a/Aula_02.ipynb
+++ b/Aula_02.ipynb
@@ -32,6 +32,70 @@
     "print('O custo da loja foi: ' +   ' R$ '  +   str(custo) + ' reais')\n",
     "print('O lucro da loja foi: ' +   ' R$ '  +   str(lucro) + ' reais')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03d3e454",
+   "metadata": {},
+   "source": [
+    "# Metodo Format \n",
+    "  F-string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bc3aa05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O faturamento da loja foi: 3000. O custo da loja foi 800. Assim, o lucro da loja foi 2200\n",
+      "O faturamento da loja foi de 3000 e o lucro foi de 2200 \n"
+     ]
+    }
+   ],
+   "source": [
+    "faturamento = 3000\n",
+    "custo = 800\n",
+    "lucro = faturamento - custo\n",
+    "\n",
+    "print('O faturamento da loja foi: {}. O custo da loja foi {}. Assim, o lucro da loja foi {}'.format(faturamento, custo, lucro))\n",
+    "\n",
+    "# com f-strings dentro da chaves pode-se fazer operações\n",
+    "print(f'O faturamento da loja foi de {faturamento} e o lucro foi de {lucro} ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d36fbfa",
+   "metadata": {},
+   "source": [
+    "# Mudanças de tipo de variável"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f7cfcc54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Lucro da loja foi de R$ 1500 reais\n"
+     ]
+    }
+   ],
+   "source": [
+    "faturamento = int(input(\"Insira o faturamento: \"))\n",
+    "custo = int(input(\"Insira o custo: \"))\n",
+    "lucro = faturamento - custo\n",
+    "print(f\"O Lucro da loja foi de R$ {lucro} reais\")"
+   ]
   }
  ],
  "metadata": {
