--- a/Listas/Listas 05.ipynb
+++ b/Listas/Listas 05.ipynb
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O produto mais vendido teve 15000 unidades vendidas e o menos vendido teve 100 unidades vendidas\n"
+      "O produto iphone x mais vendido teve 15000 unidades vendidas e o mac book menos vendido teve 100 unidades vendidas\n"
      ]
     }
    ],
@@ -90,31 +90,31 @@
     "mais_vendido = max(vendas)\n",
     "menos_vendido = min(vendas)\n",
     "\n",
-    "print(f'O produto mais vendido teve {mais_vendido} unidades vendidas e o menos vendido teve {menos_vendido} unidades vendidas')"
+    "print(f'O produto {produtos[2]} mais vendido teve {mais_vendido} unidades vendidas e o {produtos[5]} menos vendido teve {menos_vendido} unidades vendidas')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iphone x\n",
-      "mac book\n"
+      "O produto mais vendido foi iphone x e a quantidade de 15000 unidades\n",
+      "O produto menos vendido foi mac book e a quantidade de 100 unidades\n"
      ]
     }
    ],
    "source": [
     "i = vendas.index(mais_vendido)\n",
     "produto_mais_vendido = produtos[i]\n",
-    "print(produto_mais_vendido)\n",
+    "print(f'O produto mais vendido foi {produto_mais_vendido} e a quantidade de {vendas[i]} unidades')\n",
     "\n",
     "i = vendas.index(menos_vendido)\n",
     "produto_menos_vendido = produtos[i]\n",
-    "print(produto_menos_vendido)\n"
+    "print(f'O produto menos vendido foi {produto_menos_vendido} e a quantidade de {vendas[i]} unidades')\n"
    ]
   }
  ],
