--- a/Listas/Listas 12.ipynb
+++ b/Listas/Listas 12.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,28 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n",
-      "1000\n",
-      "1710\n"
+      "Vendas de Iphone_joao: R$ 300\n",
+      "Vendas de Iphone_diego: R$ 1000\n",
+      "Total de venda Iphone: R$ 1,710.00\n",
+      "Total de venda Ipad: R$ 1,350.00\n"
      ]
     }
    ],
    "source": [
     "vendas_ipad_joao = vendas[1][0]\n",
-    "print(vendas_ipad_joao)\n",
+    "print(f'Vendas de Iphone_joao: R$ {vendas_ipad_joao}')\n",
     "\n",
     "vendas_iphone_diego = vendas[2][1]\n",
-    "print(vendas_iphone_diego)\n",
+    "print(f'Vendas de Iphone_diego: R$ {vendas_iphone_diego}')\n",
     "\n",
     "total_vendas_iphone = vendas[0][1] + vendas[1][1] + vendas[2][1] + vendas[3][1]\n",
-    "print(total_vendas_iphone)"
+    "print(f\"Total de venda Iphone: R$ {total_vendas_iphone:,.2f}\")\n",
+    "\n",
+    "total_vendas_ipad = vendas[0][0] + vendas[1][0] + vendas[2][0] + vendas[3][0]\n",
+    "print(f\"Total de venda Ipad: R$ {total_vendas_ipad:,.2f}\")"
    ]
   },
   {
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
