--- a/tuplas/Tupla 03.ipynb
+++ b/tuplas/Tupla 03.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -85,17 +85,17 @@
     "#Qual foi o faturamento de IPhone no dia 20/08/2020?\n",
     "faturamento = 0\n",
     "for item in vendas:\n",
-    "#separa os valores da primeira tupla segmentada em variaveis\n",
+    "    #separa os valores da primeira tupla segmentada em variaveis\n",
     "    data, produto, cor, capacidade, unidades, preco_unitario = item\n",
     "    if produto == 'iphone x' and data == '20/08/2020':\n",
-    "        faturamento += unidades * preco_unitario\n",
-    "   \n",
-    "print(f'O faturamento de iphone x no dia 20/08/2020 foi de R$ {faturamento:.2f}')\n"
+    "           faturamento += unidades * preco_unitario\n",
+    "print(f'O faturamento de iphone x no dia 20/08/2020 foi de R$ {faturamento:.2f}')\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
